make sure there is no scrollbar on browser window

--- a/client/src/theme/_general.scss
+++ b/client/src/theme/_general.scss
@@ -1,7 +1,11 @@
-html,
-body,
-.container {
+html {
   height: 100%;
+}
+
+body {
+  margin: 0;
+  min-height: 100%;
+  overflow: hidden;
   font-family: 'JetBrains Mono', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
